# kursovaya_new

./: README.md
package-name/: README.md  pyproject.toml
package-name/package_name/: functions.py
package-name/src/: functions.py  main.py
package-name/tests/: conftest.py  test_functions.py  test_operations.json
