[tool.poetry]
name = "package-name"
version = "0.1.0"
description = ""
authors = ["belvvika <bellvika132@gmail.com>"]
readme = "README.md"
packages = [{include = "package_name"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
